kubernetes/tailscale/gateway-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-tailscale-gateway
  namespace: kube-system
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/proxy-group: k8s-ingress-proxy
    tailscale.com/hostname: "k8s-gateway"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: web
    - name: websecure
      port: 443
      protocol: TCP
      targetPort: websecure
