kubernetes/tailscale/gateway-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-tailscale-gateway
  namespace: kube-system
  annotations:
    tailscale.com/proxy-group: k8s-ingress-proxy
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: traefik
      port:
        number: 80
  tls:
    - hosts:
        - k8s-gateway
